# AscoGraph

./: .gitignore  .gitmodules  LICENSE  README  README.md
addons/msalibs/: README.txt
addons/msalibs/ofxCocoa/src/: GLView.mm
addons/ofxBonjourIp/: README.md
addons/ofxBonjourIp/BonjourIpExample-ios/src/: testApp.h  testApp.mm
addons/ofxBonjourIp/BonjourIpExample-osx/BonjourIp.xcodeproj/: project.pbxproj
addons/ofxBonjourIp/BonjourIpExample-osx/src/: testApp.cpp
addons/ofxBonjourIp/src/: ofxBonjourIp.cpp  ofxBonjourIp.h
addons/ofxCocoaWindow/: README  TODO
addons/ofxCocoaWindow/example/src/: main.mm  testApp.cpp  testApp.h
addons/ofxCocoaWindow/src/: GLView.h  GLView.mm  GLWindow.h  GLWindow.mm  OpenGLView.mm  ofxCocoaDelegate.h  ofxCocoaDelegate.mm  ofxCocoaWindow.h  ofxCocoaWindow.mm  ofxNSWindow.h  ofxNSWindow.mm  ofxNSWindowApp.h  ofxNSWindower.mm
addons/ofxCodeEditor/: CMakeCache.txt  Makefile  cmake_install.cmake
addons/ofxCodeEditor/example/: testApp.cpp
addons/ofxCodeEditor/src/: ofxCodeEditor.h  ofxCodeEditor.mm
addons/ofxColorPicker/: README.md  ofxColorPicker.cpp  ofxColorPicker.h
addons/ofxColorPicker/example/src/: ColorRect.h  testApp.cpp  testApp.h
addons/ofxConsole/src/: ofxConsole.cpp  ofxConsole.h
addons/ofxGuido/lib/guidolib-code/: Makefile
addons/ofxGuido/src/: .ofxGuido.cpp.swo  .ofxGuido.cpp.swp  .ofxGuido.h.swp  ofxGuido.cpp  ofxGuido.h
addons/ofxHttpServer/: .cproject  .project
addons/ofxHttpServer/example/: addons.make
addons/ofxHttpServer/example/src/: testApp.cpp  testApp.h
addons/ofxHttpServer/libs/libmicrohttpd-0.9.16/: MHD_config.h  Makefile  config.status  libmicrohttpd.pc  libtool
addons/ofxHttpServer/src/: ofxHTTPServer.cpp  ofxHTTPServer.h
addons/ofxMSATimer/: README.md
addons/ofxMSATimer/example/: addons.make
addons/ofxMSATimer/example/msaTimerExample.xcodeproj/: project.pbxproj
addons/ofxMSATimer/example/src/: testApp.cpp  testApp.h
addons/ofxMSATimer/src/: ofxMSATimer.cpp  ofxMSATimer.h
addons/ofxMidiParser/: .ofxMidiParser.h.swp  .ofxMidiParser.mm.swp  ofxMidiParser.h  ofxMidiParser.mm
addons/ofxModifierKeys/empty/: addons.make
addons/ofxModifierKeys/empty/emptyExample.xcodeproj/: project.pbxproj
addons/ofxModifierKeys/empty/src/: testApp.cpp
addons/ofxModifierKeys/src/: ofxModifierKeys.h  ofxModifierKeys_impl_linux.cpp  ofxModifierKeys_impl_mac.mm  ofxModifierKeys_impl_win.cpp
addons/ofxTextInputField/example-textInput/textInputExample.xcodeproj/: project.pbxproj
addons/ofxTimecode/example-smpte/timecodeSMPTEExample.xcodeproj/: coffy.mode1v3  coffy.pbxuser
addons/ofxTimeline/example-curvesAndColors/example-curvesAndColors.xcodeproj/: project.pbxproj
addons/ofxTimeline/example-emptyTrackTemplate/EmptyTemplates.xcodeproj/: project.pbxproj
addons/ofxTimeline/example-multiTimeline/example-multiTimeline.xcodeproj/: coffy.mode1v3  coffy.pbxuser  project.pbxproj
addons/ofxTimeline/libs/ofOpenALSoundPlayer_TimelineAdditions/: ofOpenALSoundPlayer_TimelineAdditions.cpp
addons/ofxTimeline/src/: .ofxTLTrack.cpp.swp  .ofxTLTrack.h.swp  .ofxTLTrackHeader.h.swp  .ofxTimeline.cpp.swp  .ofxTimeline.h.swp  ofxHotKeys_impl_iOS.mm  ofxTLAudioTrack.cpp  ofxTLAudioTrack.h  ofxTLCurves.cpp  ofxTLCurves.h  ofxTLEmptyKeyframes.cpp  ofxTLImageSequence.cpp  ofxTLImageSequence.h  ofxTLKeyframes.cpp  ofxTLLFO.cpp  ofxTLPage.cpp  ofxTLPage.h  ofxTLTicker.cpp  ofxTLTicker.h  ofxTLTrack.cpp  ofxTLTrack.h  ofxTLTrackHeader.cpp  ofxTLTrackHeader.h  ofxTLTrackLite.cpp  ofxTLTrackLite.h  ofxTLZoomer.cpp  ofxTimeline.cpp  ofxTimeline.h
addons/ofxTimelineTracks/: README.md
addons/ofxTimelineTracks/ofxAntescofoNote/: BeatCurve.cpp  BeatCurve.h  BeatKeyframes.cpp  BeatKeyframes.h  Curves.cpp  Curves.h  KeyFrames.cpp  Keyframes.cpp  Keyframes.h  ofxTLAccompAudioTrack.cpp  ofxTLAccompAudioTrack.h  ofxTLAntescofoAction.cpp  ofxTLAntescofoAction.h  ofxTLAntescofoNote.cpp  ofxTLAntescofoNote.h  ofxTLAntescofoSim.cpp  ofxTLAntescofoSim.h  ofxTLBeatCurves.cpp  ofxTLBeatCurves.h  ofxTLBeatJump.cpp  ofxTLBeatJump.h  ofxTLBeatKeyframes.cpp  ofxTLBeatKeyframes.h  ofxTLBeatTicker.cpp  ofxTLBeatTicker.h  ofxTLMultiCurves.cpp  ofxTLMultiCurves.h  ofxTLZoomer2D.cpp  ofxTLZoomer2D.h
addons/ofxTimelineTracks/ofxTLMidiNote/: .ofxTLMidiNote.cpp.swp  ofxTLMidiNote.cpp  ofxTLMidiNote.h
addons/ofxUI/example-ofxUIAllWidgets/ofxUIAllWidgets.xcodeproj/: project.pbxproj
addons/ofxUI/example-ofxUIDynamicDropDown/ofxUIDynamicDropDown.xcodeproj/: project.pbxproj
addons/ofxUI/example-ofxUIScrollable/src/: testApp.cpp
addons/ofxUI/src/: ofxUI.h  ofxUICanvas.cpp  ofxUICanvas.h  ofxUIDropDownList.cpp  ofxUIEnvelopeEditor.cpp  ofxUIRadio.cpp  ofxUIRadio.h  ofxUIRangeSlider.h  ofxUITextInput.h  ofxUIWidget.h
addons/ofxXmlSettings/libs/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
apps/Antescofo/Antesconvert/: README.txt  go.sh
apps/Antescofo/Antesconvert/cmake/: CMakeLists.txt
apps/Antescofo/Antesconvert/src/: main.cpp  testApp.cpp  testApp.h
apps/Antescofo/Ascograph/: .Project.xcconfig.swp  AscoGraph-Info.plist  Info.plist_orig  go.sh  patch_Comm_Max_OSC.maxpat
apps/Antescofo/Ascograph/AscoGraph/: iOSAscoGraphMenu.h  iOSAscoGraphMenu.mm  iOSAscoGraphMenu.xib  location.hh  position.hh
apps/Antescofo/Ascograph/AscoGraph.xcodeproj/: project.pbxproj
apps/Antescofo/Ascograph/cmake/: CMakeLists.txt
apps/Antescofo/Ascograph/doc/: ascograph_doc.odt
apps/Antescofo/Ascograph/guidolib-1.51-src/: Makefile
apps/Antescofo/Ascograph/guidolib-code/: Makefile
apps/Antescofo/Ascograph/src/: .Score.h.swp  iOSAscoGraph.h  iOSAscoGraph.mm  main.cpp  mainMacOSX.mm  midiconvert.cpp  ofxAntescofoSim.cpp  ofxAntescofog.cpp  ofxAntescofog.h
apps/Antescofo/Ascograph/test_scores/: Antesconverted.asco.txt  Antonio Carlos Jobim - The Girl from Ipanema.asco.txt  Antonio Carlos Jobim - The Girl from Ipanema.mscz  Einspielung I - 33+mes.asco.txt  (+95 more)
libs/openFrameworks/app/: ofAppRunner.cpp  ofAppRunner.h
libs/openFrameworks/graphics/: .ofTrueTypeFont.cpp.swp  ofImage.cpp  ofTrueTypeFont.cpp
libs/openFrameworks/utils/: ofSystemUtils.cpp
(+368 files in other folders)
